[project]
name = "orange-soda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jolsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "basemap>=1.4.1",
    "matplotlib>=3.8.4",
    "skyfield>=1.49",
]

[project.scripts]
ground-tracks = "orange_soda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
