[project]
name = "orange-soda"
version = "0.1.0dev1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jolsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "basemap>=1.4.1",
    "geojson-pydantic>=1.2.0",
    "matplotlib>=3.8.4",
    "pydantic>=2",
    "skyfield>=1.49",
]

[project.scripts]
ground-tracks = "orange_soda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.124.9",
    "pytest>=8.3.4",
]
