[project]
name = "orange-soda"
version = "0.1.0dev1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jolsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "antimeridian>=0.4.0",
    "basemap>=1.4.1",
    "geojson>=3.2.0",
    "matplotlib>=3.8.4",
    "skyfield>=1.49",
    "thistle",
]

[project.scripts]
ground-tracks = "orange_soda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.124.9",
    "pytest>=8.3.4",
]

[tool.uv.sources]
thistle = { path = "../thistle", editable = true }
